# LMMC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  example_bicgstab_batch.c  example_bicgstab_general.c  example_cg_spd.c  example_fft_radix4.c  example_gmres_restart.c  example_lammp_ext.c  example_linear_solve.c  example_math_utils.c  example_nonlinear_bisection.c  example_nonlinear_logging.c  example_nonlinear_newton.c  example_nonlinear_secant.c  example_ode_adapt.c  example_ode_euler.c  example_ode_logging.c  example_ode_rk4.c  example_solver_logging.c  example_sparse_ops.c  example_stats.c  example_tensor_benchmark.c  example_tensor_ops.c
include/lmmc/: config.h  dense.h  init.h  itersolve.h  linear_algebra.h  lmmc.h  nonlinear.h  numeric.h  ode.h  precond.h  sparse.h  stats.h  status.h  tensor.h
src/: dense.c  init.c  itersolve.c  linear_algebra.c  memory_bridge.h  nonlinear.c  numeric.c  ode.c  precond.c  sparse.c  stats.c  status.c  tensor.c
test/: CMakeLists.txt  test_bicgstab.c  test_bicgstab_autogen.c  test_cholesky.c  test_common.h  test_csc.c  test_dense.c  test_gmres.c  test_itersolve.c  test_lammp_ext.c  test_lammp_stats.c  test_logging_ext.c  test_lu.c  test_math_utils.c  test_nonlinear.c  test_numeric.c  test_ode.c  test_qr.c  test_sparse.c  test_sparse_builder.c  test_spgemm.c  test_stats.c  test_tensor.c
