function(add_lmmc_example target_name source_file)
	add_executable(${target_name} ${source_file})
	target_link_libraries(${target_name} PRIVATE lmmc)
	lmmc_copy_lammp_runtime(${target_name})
endfunction()

add_lmmc_example(lmmc_example_linear_solve example_linear_solve.c)
add_lmmc_example(lmmc_example_stats example_stats.c)
add_lmmc_example(lmmc_example_sparse_ops example_sparse_ops.c)
add_lmmc_example(lmmc_example_cg_spd example_cg_spd.c)
add_lmmc_example(lmmc_example_bicgstab_general example_bicgstab_general.c)
add_lmmc_example(lmmc_example_bicgstab_batch example_bicgstab_batch.c)
add_lmmc_example(lmmc_example_gmres_restart example_gmres_restart.c)
add_lmmc_example(lmmc_example_tensor_ops example_tensor_ops.c)
add_lmmc_example(lmmc_example_tensor_benchmark example_tensor_benchmark.c)
add_lmmc_example(lmmc_example_nonlinear_bisection example_nonlinear_bisection.c)
add_lmmc_example(lmmc_example_nonlinear_newton example_nonlinear_newton.c)
add_lmmc_example(lmmc_example_nonlinear_secant example_nonlinear_secant.c)
add_lmmc_example(lmmc_example_ode_euler example_ode_euler.c)
add_lmmc_example(lmmc_example_ode_rk4 example_ode_rk4.c)
add_lmmc_example(lmmc_example_ode_adapt example_ode_adapt.c)
add_lmmc_example(lmmc_example_lammp_ext example_lammp_ext.c)
add_lmmc_example(lmmc_example_fft_radix4 example_fft_radix4.c)
