function(add_lmmc_test target_name source_file)
	add_executable(${target_name} ${source_file})
	target_link_libraries(${target_name} PRIVATE lmmc)
	lmmc_copy_lammp_runtime(${target_name})
	add_test(NAME ${target_name} COMMAND ${target_name})
endfunction()

add_lmmc_test(lmmc_test_dense test_dense.c)
add_lmmc_test(lmmc_test_bicgstab test_bicgstab.c)
add_lmmc_test(lmmc_test_bicgstab_autogen test_bicgstab_autogen.c)
add_lmmc_test(lmmc_test_gmres test_gmres.c)
add_lmmc_test(lmmc_test_itersolve test_itersolve.c)
add_lmmc_test(lmmc_test_lu test_lu.c)
add_lmmc_test(lmmc_test_numeric test_numeric.c)
add_lmmc_test(lmmc_test_sparse test_sparse.c)
add_lmmc_test(lmmc_test_stats test_stats.c)
add_lmmc_test(lmmc_test_tensor test_tensor.c)
add_lmmc_test(lmmc_test_lammp_ext test_lammp_ext.c)
add_lmmc_test(lmmc_test_nonlinear test_nonlinear.c)
add_lmmc_test(lmmc_test_ode test_ode.c)
add_lmmc_test(lmmc_test_qr test_qr.c)
add_lmmc_test(lmmc_test_math_utils test_math_utils.c)
